Penambahan div class

--- a/index.html
+++ b/index.html
@@ -9,53 +9,8 @@
     <script src="https://kit.fontawesome.com/8fa7aa25b4.js" crossorigin="anonymous"></script>
     
 <body>
-    <div class="kotakutama">
-        <p class="home3">Home</p>
-        <p class="friend">Friends</p>
-        <div class="roundborder">
-            <div class="balok1"><p class="text">a</p></div>
-    </div>
-    </div>
-    <div class="kotakkiri">
-      <div class="emoji">
-        <i class="fa-solid fa-circle-user"></i>
-        <i class="fa-solid fa-house"></i>
-        <i class="fa-solid fa-person"></i>
-        <i class="fa-solid fa-message"></i>
-        <i class="fa-solid fa-users"></i>
-        <i class="fa-solid fa-street-view"></i>
-        <i class="fa-solid fa-toolbox"></i>
-        <i class="fa-solid fa-hand-holding-hand"></i>
-        <i class="fa-solid fa-people-group"></i>
-        <i class="fa-solid fa-crown"></i>
-        <i class="fa-solid fa-comment"></i>
-        <i class="fa-solid fa-cart-shopping"></i>
-        <i class="fa-solid fa-gift"></i>
-        <p class="user">Username</p>
-        <p class="home">Home</p>
-        <p class="profile">Profile</p>
-        <p class="messages">Messages</p>
-        <p class="friends">Friends</p>
-        <p class="avatar">Avatar</p>
-        <p class="inventory">Inventory</p>
-        <p class="trade">Trade</p>
-        <p class="groups">Groups</p>
-        <p class="premium">Premium</p>
-        <p class="blog">Blog</p>
-        <p class="lorem-ipsum">
-            Lorem ipsum odor amet, consectetuer adipiscing elit.
-            Lorem ipsum odor amet, consectetuer adipiscing elit.
-            Lorem ipsum odor amet, consectetuer adipiscing elit.
-            Lorem ipsum odor amet, consectetuer adipiscing elit.
-            Lorem ipsum odor amet, consectetuer adipiscing elit.
-            Lorem ipsum odor amet, consectetuer adipiscing elit.
-            Lorem ipsum odor amet, consectetuer adipiscing elit.
-            Lorem ipsum odor amet, consectetuer adipiscing elit.
-            Lorem ipsum odor amet, consectetuer adipiscing elit.
-        </p>
-        <p class="official-store">Official Store</p>
-        <p class="gift-cards">Gift Cards</p>
-      </div>
+    
+
     <div class="kotakatas">
         <i class="fa-solid fa-gear"></i>
         <i class="fa-solid fa-coins"></i>
@@ -69,11 +24,62 @@
         <p class="marketplace">Marketplace</p>
         <p class="create">Create</p>
         <p class="currency">GoBux</p>
+            <div class="searchbar">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <p class="search">Search</p>
+        </div>
         <p class="amount">---</p>
         <p class="name">Username</p>
     </div>
-    <div class="searchbar">
-        <i class="fa-solid fa-magnifying-glass"></i>
+    <div class="menu">
+        <div class="kotakkiri">
+            <div class="emoji">
+              <i class="fa-solid fa-circle-user"></i>
+              <i class="fa-solid fa-house"></i>
+              <i class="fa-solid fa-person"></i>
+              <i class="fa-solid fa-message"></i>
+              <i class="fa-solid fa-users"></i>
+              <i class="fa-solid fa-street-view"></i>
+              <i class="fa-solid fa-toolbox"></i>
+              <i class="fa-solid fa-hand-holding-hand"></i>
+              <i class="fa-solid fa-people-group"></i>
+              <i class="fa-solid fa-crown"></i>
+              <i class="fa-solid fa-comment"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
+              <i class="fa-solid fa-gift"></i>
+              <p class="user">Username</p>
+              <p class="home">Home</p>
+              <p class="profile">Profile</p>
+              <p class="messages">Messages</p>
+              <p class="friends">Friends</p>
+              <p class="avatar">Avatar</p>
+              <p class="inventory">Inventory</p>
+              <p class="trade">Trade</p>
+              <p class="groups">Groups</p>
+              <p class="premium">Premium</p>
+              <p class="blog">Blog</p>
+              <p class="lorem-ipsum">
+                  Lorem ipsum odor amet, consectetuer adipiscing elit.
+                  Lorem ipsum odor amet, consectetuer adipiscing elit.
+                  Lorem ipsum odor amet, consectetuer adipiscing elit.
+                  Lorem ipsum odor amet, consectetuer adipiscing elit.
+                  Lorem ipsum odor amet, consectetuer adipiscing elit.
+                  Lorem ipsum odor amet, consectetuer adipiscing elit.
+                  Lorem ipsum odor amet, consectetuer adipiscing elit.
+                  Lorem ipsum odor amet, consectetuer adipiscing elit.
+                  Lorem ipsum odor amet, consectetuer adipiscing elit.
+              </p>
+              <p class="official-store">Official Store</p>
+              <p class="gift-cards">Gift Cards</p>
+            </div>
+        </div>
+        <div class="kotakutama">
+            <p class="home3">Home</p>
+            <p class="friend">Friends</p>
+            <div class="roundborder">
+                <div class="balok1"><p class="text">a</p></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
